Portfolio Link Fixes

--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
       <!-- 3 -->
       <div class="portfolio-container">
         <div class="section-title">
-          <a href="">
+          <a href="https://stevenongxd.github.io/LVinnamon-Project/">
             <h5>LVinnamon</h5>
             <h6>LVinnamon is a business that specializes in the sale of cinnamon rolls with a lot of branches around the world. LVinnamon company website consist of five (5) main pages which are Home,
               Products, Register, About Us, and Location. Each page will have different use.</h6>
@@ -419,7 +419,7 @@
       <!-- 4 -->
       <div class="portfolio-container">
         <div class="section-title">
-          <a href="https://tinyurl.com/yn9p6">
+          <a href="https://www.figma.com/file/98lWOrS8RrPqrPvGJn0gRD/Mechanic-It-UI-Prototype-Group-2?type=design&node-id=0%3A1&mode=design&t=GYltMN05MJOddKsL-1">
             <h5>Mechanic-It Prototype</h5>
             <h6>Mechanic-It is an automotive company that offers a range of convenient features, including the ability to request a mechanic to come to your desired location, online reservations for maintenance
               or repairs with partner companies, and an online maintenance reminder that helps you keep track of your vehicle's condition.</h6>
@@ -457,7 +457,7 @@
       <!-- 5 -->
       <div class="portfolio-container">
         <div class="section-title">
-          <a href="">
+          <a href="https://github.com/stevenongxd/JFAutomobile-Datasbase-Project">
             <h5>JFAutomobile Database Server</h5>
             <h6>JFAutomobile is a car rental agent that handles several business processes, such as renting cars to customers and taking the cars to mechanic for a service. This database program has been
               equipped with a DDL (Create Insert), DML (Update Delete), and Simulation queries.</h6>
@@ -495,7 +495,7 @@
       <!-- 6 -->
       <div class="portfolio-container">
         <div class="section-title">
-          <a href="">
+          <a href="https://github.com/stevenongxd/Watches-Dealer-Project">
             <h5>Watches Dealer Shop</h5>
             <h6>The WatchesDealer Shop program has been designed with both customer and admin perspectives in mind. Customers can browse and purchase watches, and also view their transaction
               history. Admins, on the other hand, have the ability to manage the products and brands offered on the website, including adding, updating, or removing them as needed.</h6>
