--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@
         <div class="col-md-10 mx-auto text-center">
           <h4>Contact Information</h4>
           <a href="mailto:steven.ong@binus.ac.id" target="_blank" class="email-link me-5">
-            <i class="fas fa-envelope"></i> steven.ong@binus.ac.id
+            <i class="fas fa-envelope"></i> steven.ong@binus.ac.id / song24112002@gmail.com
           </a>
           <a href="https://api.whatsapp.com/send?phone=081283366251" target="_blank" class="phone-link me-5">
             <i class="fas fa-phone"></i> 081283366251
