Updated Work Experience Section

--- a/index.html
+++ b/index.html
@@ -237,12 +237,12 @@
           <h3 class="resume-title">Work Experience</h3>
 
           <div class="resume-item">
-            <h4>IT Support Technician Part-Time</h4>
+            <h4>IT Support Technician Intern</h4>
             <h5>November 2022 - September 2023</h5>
             <p><em>PT. Haliber Jaya, Jakarta</em></p>
             <p>
             <ul>
-              <li>As a part-time IT Support Technician at PT. Haliber Jaya, I ensure uninterrupted workflow by swiftly troubleshooting computer issues and handling day-to-day IT operations with precision.</li>
+              <li>As an IT Support Technician Intern at PT. Haliber Jaya, I ensure uninterrupted workflow by swiftly troubleshooting computer issues and handling day-to-day IT operations with precision.</li>
             </ul>
             </p>
           </div>
